# pyqt-sql-demo

./: .gitignore  .travis.yml  Pipfile  README.md  demo.db  pyproject.toml  run.py  setup.py
.github/workflows/: build.yml
pyqt_sql_demo/: __init__.py  app.py  connection_model.py  connection_widget.py  error_handler.py  exceptions.py  main_window.py
pyqt_sql_demo/connection/: error_handler.py  exceptions.py  model.py
pyqt_sql_demo/syntax_highlighter/: sql.py
pyqt_sql_demo/widgets/: connection.py  main.py  text.py
