[tool.poetry]
name = "pyqt-sql-demo"
version = "1.0.1"
description = "PyQT SQL executor demo example using DB API (no QtSQL)"
authors = ["vduseev <vagiz@duseev.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vduseev/pyqt-sql-demo"
repository = "https://github.com/vduseev/pyqt-sql-demo"
documentation = "https://github.com/vduseev/pyqt-sql-demo"
keywords = ["pyqt", "sql", "sqlite", "qtableview"]

[tool.poetry.scripts]
pyqt-sql-demo = "pyqt_sql_demo.app:launch"

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15.0"
pygments = "^2.6.1"
mysql-connector = "2.2.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.18.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
